fix: sonarqube issues